--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -145,6 +145,7 @@
                   <li><a href="@{ShipmentReports.lossRateReport()}">运输丢失率统计报表</a></li>
                 #{/power.ck}
               <li><a href="@{ShipmentReports.monthlyShipmentReport()}">单月物流发货量报表</a></li>
+              <li><a href="@{ShipmentReports.monthlyShipmentPrescription()}">单月运输时效统计</a></li>
             </ul>
           </li>
         #{/power.ck}
