创建退货收货单的时候 ，type为 采购入库 类型

--- a/core/app/views/ShipmentReports/lossRateReport.html
+++ b/core/app/views/ShipmentReports/lossRateReport.html
@@ -137,6 +137,9 @@
           <tr>
             <th>FBA</th>
             <th>SKU</th>
+            <th>仓库</th>
+            <th>CenterId</th>
+            <th>运输方式</th>
             <th>运输量</th>
             <th>丢失量</th>
             <th>赔偿类型</th>
@@ -151,6 +154,9 @@
           <tr>
             <td>${loss.fba}</td>
             <td>${loss.sku}</td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td>${loss.qty}</td>
             <td>${loss.lossqty}</td>
             <td>${loss.compentype}</td>
