--- a/core/app/views/MaterialOutbounds/index.html
+++ b/core/app/views/MaterialOutbounds/index.html
@@ -101,7 +101,7 @@
               <td>${o.type?.label()}</td>
               <td title="${o.whouse}">${o.whouse.overLong()}</td>
               <td>${o.consignor}</td>
-              <td>${o.creator?.username}</td>
+              <td>${o.handler?.username}</td>
               <td>#{time_tooltip time:o.outboundDate/}</td>
               <td title="${o.memo}">${o.memo.overLong()}</td>
             </tr>
