--- a/core/app/views/MaterialPlans/index.html
+++ b/core/app/views/MaterialPlans/index.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:"物料出货单列表 (${materialPlans.size()})" /}
 #{set 'moreScripts'}
-  #{script 'materialPlans/index.es6'/}
+    #{script 'materialPlans/index.es6'/}
 #{/set}
 
 #{flash_alert /}
@@ -26,16 +26,29 @@
         #{/list}
     </select>
 
-      #{select_enum name: "p.planState", items: models.procure.DeliverPlan.P.values(), value: p.planState,
-      class:'inline'}
-        <option value="">状态</option>
-      #{/select_enum}
+    <select name="p.planState" style="width: 150px;" class="inline">
+      <option value="">状态</option>
+        #{list items:models.material.MaterialPlan.P.values(), as:'t'}
+          <option value="${t.name()}" ${t.name() == p.planState?.name() ? 'selected' : ''}>${t.label()}</option>
+        #{/list}
+    </select>
 
     <div class="input-prepend input-append inline">
       <span class="add-on"><i class="icon-search"></i></span>
-      <input type="text" name="p.search" class="input-medium" value="${p.search}" placeHolder="物料出货单ID,物料编码">
+      <input type="text" style="width:180px;" name="p.search" class="input-medium" value="${p.search}"
+             placeHolder="搜索 物料编码 or 物料出货单ID">
       <input type="hidden" name="p.page" value="${p.page}">
       <button class="btn btn-primary" data-loading>搜索</button>
+    </div>
+
+    <div class="input-prepend input-append inline">
+      <a href="javascript:void(0)" data-url="" class="btn btn-warning inline"
+         id="createInboundBtn">发给供应商</a>
+    </div>
+
+    <div class="input-prepend input-append inline">
+      <a href="javascript:void(0)" data-url='@{MaterialPlans.approveBatch()}' class="btn btn-warning inline"
+         id="confirmMaterialPlanBtn">财务审核</a>
     </div>
 
   </div>
@@ -50,7 +63,11 @@
     <div class="span12">
       <table class="table table-condensed table-bordered" id="data-table">
         <tr>
-          <th>全选</th>
+          <th width="20px;">
+            <label class="checkbox">
+              <input type="checkbox" id="${key ? tr_key + '_' : ''}checkbox_all" class="${tr_key} checkall" value="">
+            </label>
+          </th>
           <th>物料出货单ID</th>
           <th>物料请款单ID</th>
           <th>出货单名称</th>
@@ -68,7 +85,7 @@
             <label class="checkbox">
               <input type="checkbox" name="pids" value="${dp.id}" class="${tr_key}" id="checkbox_${dp.id}"
                      data-boxnum="" data-num="" data-lastcartonnum="" data-singleboxweight="" data-length=""
-                     data-width="" data-height="">
+                     data-width="" data-height="" financeState="${dp.financeState}">
             </label>
           </td>
           <td>
@@ -87,24 +104,22 @@
           <td>${dp.cooperator?.name}</td>
           <td>${dp.state.label()}</td>
           <td>${dp.receipt?.label()}</td>
-          <td>${dp.receive}</td>
-          <td></td>
+          <td>${dp.receiveCooperator?.name}</td>
+          <td>
+
+              #{if dp.financeState.name() == financeState.name()}
+                <!-- 只有出货单状态在 已出货 并且财务未审核的情况下 才出现财务审核的按钮 -->
+                <a href="@{MaterialPlans.approve(dp.id)}" class="btn btn-small btn-warning" uid="${dp.id}">审核</a>
+              #{/if}
+              #{else}
+              ${dp.financeState?.label()}
+              #{/else}
+          </td>
           <td>${dp.handler.username}</td>
           <td>#{time_tooltip time:dp.createDate/}</td>
         </tr>
       #{/list}
       </table>
-    </div>
-  </div>
-
-  <div class="row-fluid">
-    <div class="span12">
-      <button id="create_deliveryment_btn" class="btn btn-primary" data-disable-with='添加中'>
-        发给供应商
-      </button>
-      <button id="create_deliverplan_btn" class="btn btn-primary" data-disable-with='添加中'>
-        财务审核
-      </button>
     </div>
   </div>
 </form>
