--- a/core/app/views/MaterialPurchases/index.html
+++ b/core/app/views/MaterialPurchases/index.html
@@ -26,23 +26,10 @@
         <input type="date" name="p.to" value="${p.to.date()}">
       </div>
 
-      <select name="p.dateType" style="width: 150px;" class="inline">
-      #{list items:models.view.post.DeliveryPost.DateType.values(), as:'d'}
-        <option value="${d.name()}" ${d.name() == p.dateType.name()? 'selected' : ''}>${d.label()}</option>
-      #{/list}
-      </select>
-
       <select name="p.state" style="width: 150px;" class="inline">
         <option value="">状态</option>
       #{list items:models.material.MaterialPurchase.S.values(), as:'t'}
         <option value="${t.name()}" ${t.name() == p.state?.name() ? 'selected' : ''}>${t.label()}</option>
-      #{/list}
-      </select>
-
-      <select name="p.deliveryType" style="width: 150px;" class="inline">
-        <option value="">类型</option>
-      #{list items:models.procure.Deliveryment.T.values(), as:'t'}
-        <option value="${t.name()}" ${t.name() == p.dateType?.name() ? 'selected' : ''}>${t.label()}</option>
       #{/list}
       </select>
 
@@ -55,7 +42,8 @@
 
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
-        <input type="text" name="p.search" class="input-medium" value="${p.search}" placeHolder="搜索 id 自动识别, +N 语法">
+        <input type="text" style="width:160px;" name="p.search" class="input-medium" value="${p.search}"
+               placeHolder="搜索 物料编码 or 采购单ID">
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
 
