--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -271,14 +271,10 @@
         #{power.ck "project.change"}
           <select class="inline" style="width:100px;margin-top:6px;" id="changeProject">
               #{list items:models.User.COR.values(), as:'c'}
-                  #{if c.name() != 'MengTop'}
-                    <option value="${c.url()}" #{if c.name()==models.OperatorConfig.getVal("brandname") }
-                            selected#{/if}>${c.label()}</option>
-                  #{/if}
+                <option value="${c.url()}" #{if c.name()==models.OperatorConfig.getVal("brandname") } selected#{/if}>${c.label()}</option>
               #{/list}
           </select>
         #{/power.ck}
-
 
         *{ <li>
             <a href="@{Activitis.index()}" target="_blank">
