--- a/core/app/views/MaterialPurchases/index.html
+++ b/core/app/views/MaterialPurchases/index.html
@@ -4,7 +4,7 @@
     #{script 'component/pagination.coffee'/}
     #{script 'deliveryments/index.coffee'/}
     #{script 'procureunits/_unit_list.coffee'/}
-    #{script 'MaterialPurchases/index.es6'/}
+    #{script 'materialPurchases/index.es6'/}
 #{/set}
 
 #{info_row}
