--- a/core/app/views/MaterialPurchases/show.html
+++ b/core/app/views/MaterialPurchases/show.html
@@ -4,7 +4,7 @@
     #{script 'jquery.filedrop.js'/}
     #{script 'component/dropUpload.coffee'/}
     #{script 'timeline/timeline_js/timeline-api.js'/}
-    #{script 'MaterialPurchases/show.es6'/}
+    #{script 'materialPurchases/show.es6'/}
     #{script 'deliveryments/show.coffee'/}
 #{/set}
 
