--- a/core/app/views/MaterialOutbounds/edit.html
+++ b/core/app/views/MaterialOutbounds/edit.html
@@ -92,7 +92,7 @@
     <div class="span12">
       <div class="input-append">
         <input type="text" id="code" placeHolder="物料编码(必须)" required>
-        <a href="javascript:void(0);" 
+        <a href="javascript:void(0);"
            id="addPlanUnitBtn" class="btn btn-primary">
           快速添加
         </a>
@@ -117,7 +117,7 @@
 </div>
 
 <div id="cancel_outbound_modal" class="modal hide fade">
-  <form action="@{StockRecords.cancelOutbound()}" method="post">
+  <form action="" method="post">
     <div class="modal-body">
       <table>
         <tr>
