1 物料出货单创建时间挪后(改为出库单点击按钮创建模式)

--- a/core/app/views/MaterialPlans/_unit_list.html
+++ b/core/app/views/MaterialPlans/_unit_list.html
@@ -15,7 +15,7 @@
   <tr class="text-center">
     <td>${unit.material?.code}</td>
     <td>${unit.material?.name}</td>
-    <td>${unit.qty}</td>
+    <td>${unit.material?.surplusConfirmQty()}</td>
     <td>${unit.qty}</td>
     <td>${unit.material?.projectName}</td>
     <td>${unit.handler?.username}</td>
