--- a/core/app/views/MaterialPlans/indexMaterial.html
+++ b/core/app/views/MaterialPlans/indexMaterial.html
@@ -14,7 +14,7 @@
 #{flash_alert /}
 
 <div class="row-fluid">
-  <form action="@{MaterialOutbounds.indexMaterial()}" method="get" class="search_form" id="search_Form">
+  <form action="@{MaterialPlans.indexMaterial()}" method="get" class="search_form" id="search_Form">
     <div class="row-fluid">
       <div class="span12">
         <select name="p.type" class="inline">
@@ -26,15 +26,18 @@
 
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" style="width:220px;" name="p.search" placeholder="物料编码 or 物料名称 or 规格 or 工艺 or 图号/版本" value="${p.search}">
+          <input type="text" style="width:220px;" name="p.search" placeholder="物料编码 or 物料名称" value="${p.search}">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
+          <input type="text" id="name_input" name="planName" placeHolder="物料出货单的别名(必须)" required>
+          <a href="javascript:void(0);" id="createPlanBtn" data-disable-with='添加中' class="btn btn-primary">添加物料出货单
+          </a>
         </div>
       </div>
     </div>
   </form>
 
-  <form method="post" id="planForm" action="@{MaterialPlans.materialPlan()}">
+  <form method="post" id="planForm" action="@{MaterialPlans.blank()}">
     <div class="row-fluid">
       <div class="span12">
         <table class="table table-condensed table-bordered" id="data-table">
@@ -82,16 +85,6 @@
       </div>
     </div>
 
-    <div class="row-fluid">
-        <div class="span12">
-              <div class="input-append">
-                <input type="text" id="name_input" name="planName"  placeHolder="物料出货单的别名(必须)" required>
-                <button id="createPlanBtn" class="btn btn-primary" data-disable-with='添加中'>
-                  添加物料出货单
-                </button>
-              </div>
-        </div>
-      </div>
-    
+    <input type="hidden" id="name_form" name="planName" >
   </form>
 </div>
