--- a/core/app/views/MaterialPlans/show.html
+++ b/core/app/views/MaterialPlans/show.html
@@ -4,7 +4,6 @@
     #{script 'jquery.filedrop.js'/}
     #{script 'component/dropUpload.coffee'/}
     #{script 'materialPlans/edit.js'/}
-    #{script 'deliveryments/show.coffee'/}
 #{/set}
 
 #{errorMsgs /}
@@ -41,17 +40,16 @@
           <tr>
             <th>供应商</th>
             <td>
-              <input type="hidden" value="${dp?.cooperator?.id}" required/>
+              <input type="hidden" name="dp.cooperator.id"  value="${dp?.cooperator?.id}" required/>
               <input type="text" value="${dp?.cooperator?.name}" readonly/>
             </td>
             <th>项目名称<span style="color:red">*</span></th>
             <td>
-              <select name="dp.projectName" class="inline">
+              <select name="dp.projectName" class="inline" required>
                 <option value="">项目名称</option>
               #{list items:models.User.COR, as:'c'}
                   #{if java.util.Arrays.asList(brandName,models.User.COR.MengTop.name()).contains(c.name())}
-                    <option ${c.name() == dp.projectName ? 'selected' : ''} value="${c.name()}">${c.label()
-                    }</option>
+                    <option ${c.name() == dp.projectName ? 'selected' : ''} value="${c.name()}">${c.label() }</option>
                   #{/if}
               #{/list}
               </select>
@@ -62,13 +60,13 @@
             <td>
               <select name="dp.receiveCooperator.id" class="inline selectize" style="width:220px;" id="outCooperator">
                 <option value="">请输入收货供应商代码/品拓</option>
-                  #{list items:cooperators, as:'cop'}
-                    <option #{if dp?.receiveCooperator?.id==cop.id} selected #{/if} value="${cop.id}">${cop.name}</option>
-                  #{/list}
+              #{list items:cooperators, as:'cop'}
+                <option #{if dp?.receiveCooperator?.id==cop.id} selected #{/if} value="${cop.id}">${cop.name}</option>
+              #{/list}
               </select>
             </td>
             <th>目的地</th>
-            <td><input type="text" class="span8" name="dp.address" value="${dp?.address}" id="whouse" ></td>
+            <td><input type="text" class="span8" name="dp.address" value="${dp?.address}" id="whouse"></td>
           </tr>
           <tr>
             <th>创建人</th>
@@ -128,12 +126,12 @@
           <td>${unit.material?.surplusConfirmQty()}</td>
           <td>
               #{if qtyEdit}
-                <input type="text" name="qty" class="input-medium" value="0">
+                <input type="text" name="qty" class="input-medium" value="${unit.qty}">
               #{/if}
               #{else } ${unit.qty} #{/else}
           </td>
           <td>
-              #{if unit.receiptQty == 0 }
+              #{if unit.receiptQty == 0 && !qtyEdit}
                 <a href="javascript:void(0)" name="unitUpdateBtn" class="btn btn-small btn-primary" id="qs_${unit.id}"
                    uid="${unit.id}">签收异常</a>
               #{/if}
@@ -151,22 +149,28 @@
 #{if qtyEdit}
   <div class="row-fluid">
     <div class="span12">
+
+
       <div class="input-append">
-        <a href="javascript:void(0);" data-url='@{MaterialPlans.confirm(dp.id)}'
-           id="confirmPlanBtn" class="btn btn-primary">
+        <button id="confirmPlanBtn" class="btn btn-primary" data-disable-with='添加中'>
           确认
-        </a>
-        <a href="javascript:void(0);" data-url='@{MaterialPlans.delunits(dp.id)}' data-method="DELETE"
-           id="delunit_form_submit" rel="popover" class="btn btn-warning"
-           content="将 DELIVERY 状态的出货计划从出货单中移除出去" placement="right">
-          解除
-        </a>
-        <input type="text" id="code" placeHolder="物料编码(必须)" required>
-        <a href="javascript:void(0);" data-url='@{MaterialPlans.confirm(dp.id)}'
-           id="addPlanUnitBtn" class="btn btn-primary">
-          快速添加
-        </a>
+        </button>
       </div>
+
+      <div class="input-append">
+        <button id="delunit_form_submit" class="btn btn-primary"  data-url='@{MaterialPlans.delunits(dp.id)}'   data-method="DELETE"
+                placeHolder="将 DELIVERY 状态的出货计划从出货单中移除出去" data-disable-with='解除中'>
+          解除
+        </button>
+      </div>
+
+      <div class="input-append">
+        <input type="text" id="code" placeHolder="物料编码(必须)" >
+        <button id="addPlanUnitBtn" class="btn btn-primary" data-disable-with='添加中'>
+          快速添加
+        </button>
+      </div>
+     
     </div>
   </div>
 #{/if}
