物料出库单代码优化与页面调整

--- a/core/app/views/MaterialOutbounds/blank.html
+++ b/core/app/views/MaterialOutbounds/blank.html
@@ -68,7 +68,7 @@
       </tr>
       <tr>
         <td colspan="6">
-          <button class="btn btn-primary" name="create_record">创建/更新</button>
+          <button class="btn btn-primary" name="create_record">创建</button>
           <a target="_blank" href="@{ProcureUnits.exportLogs()}" class="btn btn-info inline">
             <i class="icon-list-alt"></i>导出</a>
         </td>
