--- a/core/app/views/MaterialOutbounds/edit.html
+++ b/core/app/views/MaterialOutbounds/edit.html
@@ -71,7 +71,7 @@
       </tr>
       <tr>
         <td colspan="6">
-          <button class="btn btn-primary" name="create_record">创建/更新</button>
+          <button class="btn btn-primary" name="create_record">更新</button>
           <a target="_blank" href="@{ProcureUnits.exportLogs()}" class="btn btn-info inline">
             <i class="icon-list-alt"></i>导出</a>
         </td>
