修复 物料出库单 列表字段中，收货方赋值错误

--- a/core/app/views/MaterialOutbounds/index.html
+++ b/core/app/views/MaterialOutbounds/index.html
@@ -98,7 +98,7 @@
               <td>${o.projectName}</td>
               <td>${o.type?.label()}</td>
               <td style="background-color:${o.status.rgb()}">${o.status?.label()}</td>
-              <td>${o.type?.label()}</td>
+              <td>${o.cooperator?.name}</td>
               <td title="${o.whouse}">${o.whouse.overLong()}</td>
               <td>${o.consignor}</td>
               <td>${o.handler?.username}</td>
