--- a/core/app/views/Products/blank.html
+++ b/core/app/views/Products/blank.html
@@ -23,17 +23,17 @@
           <th>Category</th>
           <td>
             <input type="text" id="pro_category" name="pro.category.categoryId" value="${pro.category?.categoryId}" style="width:130px"
-                   data-provide="typeahead" data-source="${categorys}" required="required">
+                   data-provide="typeahead" data-source="${categorys}" required="required" autocomplete="off">
           </td>
 
           <th>Family</th>
           <td>
-            <input type="text" id="pro_family" name="pro.family.family" data-provide="typeahead"
+            <input type="text" id="pro_family" name="pro.family.family" data-provide="typeahead" autocomplete="off"
                    data-source="${families}" value="${pro.family?.family}" style="width:130px" required="required">
           </td>
 
           <th>SKU</th>
-          <td><input type="text" id="pro_sku" name="pro.sku" value="${pro.sku}" required="required"></td>
+          <td><input type="text" id="pro_sku" name="pro.sku" value="${pro.sku}" required="required" autocomplete="off"></td>
         </tr>
 
         <tr>
