1 物料出货单 项目名称：默认为erp系统名称（ea与b2b后期会隔离开），去掉必填符号

--- a/core/app/views/MaterialPlans/indexMaterial.html
+++ b/core/app/views/MaterialPlans/indexMaterial.html
@@ -29,10 +29,11 @@
           <input type="text" style="width:220px;" name="p.search" placeholder="物料编码 or 物料名称" value="${p.search}">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
-          <input type="text" id="name_input" name="planName" placeHolder="物料出货单的别名(必须)" required>
-          <a href="javascript:void(0);" id="createPlanBtn" data-disable-with='添加中' class="btn btn-primary">添加物料出货单
-          </a>
+
         </div>
+        <div class="input-prepend input-append inline">
+          <a href="javascript:void(0);" id="createPlanBtn" data-disable-with='添加中' class="btn btn-success">添加物料出货单
+                   </a>
       </div>
     </div>
   </form>
