--- a/core/app/views/MaterialPlans/show.html
+++ b/core/app/views/MaterialPlans/show.html
@@ -54,12 +54,7 @@
             <td>
             #{if qtyEdit}
               <select name="dp.projectName" class="inline" required>
-                <option value="">项目名称</option>
-              #{list items:models.User.COR, as:'c'}
-                  #{if java.util.Arrays.asList(brandName,models.User.COR.MengTop.name()).contains(c.name())}
-                    <option ${c.name() == dp.projectName ? 'selected' : ''} value="${c.name()}">${c.label() }</option>
-                  #{/if}
-              #{/list}
+                <option value="${brandName}">${brandName}</option>
               </select>
             #{/if}
             #{else }
