--- a/core/app/views/MaterialOutbounds/indexMaterial.html
+++ b/core/app/views/MaterialOutbounds/indexMaterial.html
@@ -24,6 +24,13 @@
         #{/list}
         </select>
 
+        <select name="p.cooperId" class="inline selectize" style="width:150px;">
+          <option value="">供应商</option>
+          #{list items:cooperators, as:'sp'}
+            <option ${sp.id == p.cooperId ? 'selected' : ''} value="${sp.id}">${sp.name}</option>
+          #{/list}
+        </select>
+
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
           <input type="text" style="width:220px;" name="p.search" placeholder="物料编码 or 物料名称" value="${p.search}">
